--- a/gb/22/3/29/n13680855.md
+++ b/gb/22/3/29/n13680855.md
@@ -6,14 +6,22 @@
 <h6>2022年3月29日，土耳其总统埃尔多安（Recep Tayyip Erdogan，中）在伊斯坦布尔宣布乌克兰和俄罗斯会谈开始。(Murat Cetin Muhurdar/Turkish Presidential Press Service/AFP)
 </h6>
 <hr>
-	<p>【大纪元2022年03月29日讯】（大纪元记者李言综合报导）周二（3月29日），<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BF%84%E4%B9%8C%E6%88%98.md#1">俄乌战</a>争进入第34天。俄罗斯和乌克兰代表在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9C%9F%E8%80%B3%E5%85%B6.md#1">土耳其</a>首都举行了近三周来首次面对面会谈。路透社报导说，在俄军从基辅撤退之际，乌方寻求在不损害领土完整或主权的前提下实现停火。同时，美国方面表示，普京似乎没有打算为结束战争而做出妥协。</p>
+	<p>【大纪元2022年03月29日讯】（大纪元记者李言、李馨综合报导）周二（3月29日），<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BF%84%E4%B9%8C%E6%88%98.md#1">俄乌战</a>争进入第34天。俄罗斯和乌克兰代表在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9C%9F%E8%80%B3%E5%85%B6.md#1">土耳其</a>首都举行了近三周来首次面对面会谈。路透社报导说，在俄军从基辅撤退之际，乌方寻求在不损害领土完整或主权的前提下实现停火。同时，美国方面表示，普京似乎没有打算为结束战争而做出妥协。</p>
 <figure id="attachment_13680905" aria-describedby="caption-attachment-13680905" style="width: 533px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/03/id13680905-000_32778HL.jpg"><img class="size-medium_vertical wp-image-13680905" src="https://i.epochtimes.com/assets/uploads/2022/03/id13680905-000_32778HL-533x400.jpg" alt="" width="533" b="400" /></a><figcaption id="caption-attachment-13680905" class="wp-caption-text">2022年3月29日，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9C%9F%E8%80%B3%E5%85%B6.md#1">土耳其</a>总统埃尔多安（Recep Tayyip Erdogan，中）在伊斯坦布尔宣布乌克兰和俄罗斯会谈开始。(Ukrainian Presidential Press Service/AFP)</figcaption></figure>
 <p>在俄乌双方恢复面对面<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%92%8C%E8%B0%88.md#1">和谈</a>之际，俄军继续在乌克兰进行最近越来越多采用的远程轰炸。面对日益恶化的人道危机，乌克兰总统呼吁欧盟对俄罗斯实施石油禁运。</p>
 <h2>以下是3月29日俄乌局势实时更新：</h2>
+<h3>俄乌<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%92%8C%E8%B0%88.md#1">和谈</a>后 美股开盘上涨</h3>
+<p>美国股市周二开盘走高，投资者密切关注俄罗斯和乌克兰之间的停火谈判。俄罗斯官员在土耳其会见了乌克兰代表团，双方都表示会谈是建设性的。</p>
+<p>油价受此消息影响下跌：布伦特原油跌至每桶106美元，美国西德克萨斯中质原油跌破100美元。这两个基准指数周一都下跌了7%。</p>
+<p>以下是美国股市今天开盘的情况:</p>
+<p>道琼斯指数上涨1%<br />
+标准普尔500上涨了约1%<br />
+纳斯达克综合指数增长了1.1%</p>
+<p>与此同时，5年期美国国债收益率周一升至30年期国债收益率上方，并在周二保持不变。这是自2006年以来的首次倒挂，投资者担心这预示着经济衰退即将来临。</p>
 <h3>俄乌会谈 乌方说会谈围绕两个焦点</h3>
 <figure id="attachment_13608153" aria-describedby="caption-attachment-13608153" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/02/id13608153-GettyImages-686354970.jpg"><img class="size-medium_vertical wp-image-13608153" src="https://i.epochtimes.com/assets/uploads/2022/02/id13608153-GettyImages-686354970-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13608153" class="wp-caption-text">俄罗斯寡头罗曼?阿布拉莫维奇（Roman Abramovich）资料图。(Ben Stansall/AFP via Getty Images)</figcaption></figure>
-<p>俄乌新一轮<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%92%8C%E8%B0%88.md#1">和谈</a>正在土耳其首都进行。据路透社报导，乌方说会谈围绕两个焦点。</p>
-<p>“现在正在就一些重要问题进行密集磋商，其中最重要的是就乌克兰的国际安全保障达成协议。”乌克兰总统顾问米哈伊洛?波多利亚克（Mykhailo Podolyak）说，“因为有了这个协议，我们就能够按照乌克兰的需要结束战争。”</p>
+<p>俄乌新一轮和谈正在土耳其首都进行。据路透社报导，乌方说会谈围绕两个焦点。</p>
+<p>“现在正在就一些重要问题进行密集磋商，其中最重要的是就乌克兰的国际安全保障达成协议。”乌克兰总统办公室顾问米哈伊洛?波多利亚克（Mykhailo Podolyak）说，“因为有了这个协议，我们就能够按照乌克兰的需要结束战争。”</p>
 <p>“第二个问题是停火，以解决所有积压的人道主义问题。”波多利亚克补充说。</p>
 <p>乌克兰媒体报导，双方在谈判桌前坐下来之前没有握手。</p>
 <p>据报导，受到西方制裁的俄罗斯寡头罗曼?阿布拉莫维奇（Roman Abramovich）周二正在观察俄乌双方在土耳其的和谈。</p>
@@ -61,20 +69,22 @@
 <p>然而，该部警告说，俄军攻击军事和民用基础设施风险“很高”，称俄军正在努力增援和换人。</p>
 <p>该部说，在俄罗斯入侵第34天之际，“英勇的”乌克兰抵抗力量正在“东部、东南部和东北部方向进行防御行动”，从四面八方抑制敌人，并在一些方位上赶走他们。</p>
 <p>责任编辑：李寰宇#</p>
+<div id="gtx-anchor" style="position: absolute; visibility: hidden; left: 10px; top: 705.497px; width: 184.864px; height: 18.1818px;"></div>
+<div class="jfk-bubble gtx-bubble" style="visibility: visible; left: 88px; top: 733px; opacity: 1;"></div>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/25/n12282314.md#1">《魔鬼在统治着我们的世界》系列片（6）</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13681024.md#1">【名家专栏】中共在俄乌冲突中越发孤立</a></li>
 <li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680482.md#1">【疫情3.29】马斯克再次感染中共病毒</a></li>
 <li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680625.md#1">巴西总统博尔索纳罗身体不适入院检查</a></li>
-<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680436.md#1">学者：中共封控令经济每月至少损失460亿美元</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/2/n10015824.md#1" target="_blank">文武：中共篡政（三）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/9/12/n4526041.md#1" target="_blank">子华：谁是真正破坏社会安定的人</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/14/n10144729.md#1" target="_blank">林辉：支持缅共的知青旅往事并不如烟</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/29/n10261167.md#1" target="_blank">一位加拿大生物学家无止境的神奇之路</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
